@@ -5,44 +5,45 @@ plugins {
     `maven-publish`
 
     // gRPC
-    id("com.google.protobuf") version "0.8.19"
+    id("com.google.protobuf") version "0.9.4"
 
-    id("io.freefair.lombok") version "6.5.1"
+    id("io.freefair.lombok") version "8.3"
 }
 
 group = "dev.emortal.api"
 version = "1.0"
 
-val grpcVersion = "1.57.2"
-val protobufVersion = "3.24.2"
+val grpcVersion = "1.58.0"
+val protobufVersion = "3.24.3"
 val protocVersion = protobufVersion
 
 repositories {
     mavenCentral()
+
     maven("https://packages.confluent.io/maven/")
 }
 
 dependencies {
     api("com.google.protobuf:protobuf-java:$protobufVersion")
-    api("org.apache.tomcat:annotations-api:6.0.53")
-    api("org.slf4j:slf4j-api:2.0.6")
+    api("org.apache.tomcat:tomcat-annotations-api:10.1.13")
+    api("org.slf4j:slf4j-api:2.0.9")
 
-    implementation("io.micrometer:micrometer-core:1.10.5")
-    implementation("org.apache.kafka:kafka-clients:7.0.1-ccs")
+    implementation("io.micrometer:micrometer-core:1.11.4")
+    implementation("org.apache.kafka:kafka-clients:7.4.0-ccs")
 
     compileOnly("org.jetbrains:annotations:24.0.1")
     annotationProcessor("org.jetbrains:annotations:24.0.1")
 
-    implementation("com.github.ben-manes.caffeine:caffeine:3.1.5")
+    implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
 
     api("io.grpc:grpc-netty:$grpcVersion")
     api("io.grpc:grpc-stub:$grpcVersion")
     api("io.grpc:grpc-protobuf:$grpcVersion")
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
-    testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
-    testRuntimeOnly("org.slf4j:slf4j-simple:2.0.6")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.10.0")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.0")
+    testRuntimeOnly("org.slf4j:slf4j-simple:2.0.9")
 }
 
 protobuf {
@@ -70,20 +71,12 @@ protobuf {
 
 java {
     toolchain {
-        languageVersion.set(JavaLanguageVersion.of(20))
+        languageVersion.set(JavaLanguageVersion.of(21))
     }
 }
 
-tasks {
-    test {
-        useJUnitPlatform()
-    }
-    compileJava {
-        options.compilerArgs.addAll(listOf(
-                "--release", "20",
-                "--enable-preview"
-        ))
-    }
+tasks.test {
+    useJUnitPlatform()
 }
 
 publishing {
